[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "offcloud_api"
version = "0.3.0"
description = "Comprehensive Python client for the Offcloud API with automatic retries and full endpoint coverage"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  { name = "apacalpa", email = "me@apacalpa.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["offcloud", "api", "download", "cloud", "proxy"]
dependencies = [
  "requests>=2.25.0"
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.910",
    "types-requests",
]

[project.urls]
Homepage = "https://github.com/apacalpa/offcloud_api"
Documentation = "https://github.com/apacalpa/offcloud_api#readme"
Repository = "https://github.com/apacalpa/offcloud_api"
"Bug Tracker" = "https://github.com/apacalpa/offcloud_api/issues"

[tool.setuptools]
packages = ["offcloud_api"]

[tool.black]
line-length = 100
target-version = ['py37']

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true